# RoadBuddy-AI

./: .gitignore  README.md  biome.json  components.json  docker-compose.yml  init-local-instance.sh  package-lock.json  package.json  pnpm-lock.yaml  setup.sh
bot/: Dockerfile  drizzle.config.ts  package-lock.json  package.json
bot/migrations/: 0000_dazzling_avengers.sql  0001_wealthy_lockheed.sql  0002_melted_the_twelve.sql  0003_cynical_albert_cleary.sql
bot/src/: index.ts
db/: Dockerfile  postgresql.conf
drizzle/: 0001_rich_korvac.sql  0002_lonely_mesmero.sql  0003_cooing_spyke.sql  0004_broad_living_tribunal.sql  0005_eager_enchantress.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  (+5 more)
mapillary_geo_scrapper/: config.py  mapillary_downloader.py
question_gen_api/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
question_gen_api/api/: main.py  requirements.txt
question_gen_api/api/routes/: exam_chat.py  exam_chat_question.py  liveness.py  similarity_search.py  street_image.py
question_gen_api/api/schemas/: exam_chat.py  exam_chat_question.py  similiarity_search.py  street_image.py
question_gen_api/clients/: mistral_client.py  role_assumer_client.py  s3_client.py
question_gen_api/controllers/: driving_exam_chat_contoller.py  similarity_search_controller.py  street_image_controller.py  street_image_controller_script.py
question_gen_api/scripts/: init_street_image_questions_index.py
question_gen_api/shared/: constants.py  prompts.py
src/: flow.ts  flowRunner.ts  interpretators.ts
(+32 files in other folders)
